# integration-payment-stripe-api

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
src/: app.py
src/core/: __init__.py  base.py  settings.py
src/routes/: __init__.py  customer.py  payment.py  product.py  subscription.py
src/schemas/: __init__.py  customer.py  payment.py  product.py  subscription.py
src/services/: __init__.py  customer.py  payment.py  product.py  subscription.py  webhook.py
src/utils/: __init__.py  payment.py
